--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
    <groupId>org.jboss.ejb3.heks</groupId>
    <artifactId>jboss-ejb3-heks</artifactId>
-   <version>0.1.0-SNAPSHOT</version>
+   <version>0.1.0</version>
 
    <packaging>jar</packaging>
 
