--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 
    <properties>
       <!-- per default maven.repo.local is null, so set up a sensible default -->
-      <maven.repo.local>${user.home}/.m2/repository</maven.repo.local>
+      <maven.repo.local>${settings.localRepository}</maven.repo.local>
    </properties>
 
    <reporting>
